--- a/backend/AuthenticationService/AuthenticationService.Infrastructure/AuthenticationService.Infrastructure.csproj
+++ b/backend/AuthenticationService/AuthenticationService.Infrastructure/AuthenticationService.Infrastructure.csproj
@@ -4,6 +4,13 @@
     <ProjectReference Include="..\AuthenticationService.Application\AuthenticationService.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
