--- a/backend/AuthenticationService/AuthenticationService.API/appsettings.json
+++ b/backend/AuthenticationService/AuthenticationService.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WeatherAppAuth;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Secret": "SuperSecretKey123456789123456789123456789",
+    "Issuer": "WeatherApp.AuthService",
+    "Audience": "WeatherApp.Users",
+    "ExpiryMinutes": 60
+  }
 }
