Step 8: Add database migration and test Authentication API

--- a/backend/AuthenticationService/AuthenticationService.API/appsettings.json
+++ b/backend/AuthenticationService/AuthenticationService.API/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=localhost;Database=WeatherAppAuth;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Secret": "SuperSecretKey123456789123456789123456789",
+    "Secret": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
     "Issuer": "WeatherApp.AuthService",
     "Audience": "WeatherApp.Users",
     "ExpiryMinutes": 60
