--- a/backend/AuthenticationService/AuthenticationService.API/AuthenticationService.API.csproj
+++ b/backend/AuthenticationService/AuthenticationService.API/AuthenticationService.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <ProjectReference Include="..\AuthenticationService.Infrastructure\AuthenticationService.Infrastructure.csproj" />
@@ -16,6 +16,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b48b5636-cc25-4937-8dfe-f6f8b313040e</UserSecretsId>
   </PropertyGroup>
 
 </Project>
