--- a/backend/AuthenticationService/AuthenticationService.API/appsettings.json
+++ b/backend/AuthenticationService/AuthenticationService.API/appsettings.json
@@ -7,10 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WeatherAppAuth;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=WeatherAppAuth;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Secret": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
     "Issuer": "WeatherApp.AuthService",
     "Audience": "WeatherApp.Users",
     "ExpiryMinutes": 60
