Step 14: Add Federated Authentication (Google Login)

--- a/backend/AuthenticationService/AuthenticationService.API/appsettings.json
+++ b/backend/AuthenticationService/AuthenticationService.API/appsettings.json
@@ -13,5 +13,8 @@
     "Issuer": "WeatherApp.AuthService",
     "Audience": "WeatherApp.Users",
     "ExpiryMinutes": 60
+  },
+  "Google": {
+    "ClientId": ""
   }
 }
