--- a/backend/AuthenticationService/AuthenticationService.Infrastructure/AuthenticationService.Infrastructure.csproj
+++ b/backend/AuthenticationService/AuthenticationService.Infrastructure/AuthenticationService.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
   </ItemGroup>
