--- a/backend/AuthenticationService/AuthenticationService.Application/AuthenticationService.Application.csproj
+++ b/backend/AuthenticationService/AuthenticationService.Application/AuthenticationService.Application.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="12.1.1" />
   </ItemGroup>
 
