--- a/backend/LoggingService/LoggingService.Infrastructure/LoggingService.Infrastructure.csproj
+++ b/backend/LoggingService/LoggingService.Infrastructure/LoggingService.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
   </ItemGroup>
